tests/negative/gold/incomplete-static-access-test.gold
tests/negative/incomplete-static-access-test.toit:11:15: error: Incomplete expression
  c := self.C.
              ^
Compilation failed
